# pact-playground

./: .gitignore  README.md
consumer/: README.md  app.py  consumer-open-api-producer.json  consumer-open-api-provider.json  consumer-producer.json  consumer-provider.json  pact.sh  pyproject.toml  test_app.py
open-api-producer/: Dockerfile  README.md  app.py  pact.sh  pyproject.toml  test_app.py
open-api-provider/: README.md  app.py  pact.sh  pyproject.toml  test_app.py
producer/: README.md  pact.sh  pyproject.toml  test_user_api.py
provider/: app.py  pact.sh  pyproject.toml  test_user_api.py
